--- a/sdk/android/build.gradle
+++ b/sdk/android/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 
     dependencies {
       classpath("com.android.tools.build:gradle:3.5.4")
+      classpath 'com.huawei.agconnect:agcp:1.4.1.300'
     }
   }
 }
