--- a/client/ios/RelatedDigitalTestClient/Info.plist
+++ b/client/ios/RelatedDigitalTestClient/Info.plist
@@ -49,6 +49,7 @@
 	<array>
 		<string>fetch</string>
 		<string>location</string>
+		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
