--- a/client/ios/RelatedDigitalTestClient/Info.plist
+++ b/client/ios/RelatedDigitalTestClient/Info.plist
@@ -66,5 +66,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>TheNautigal_Regular.ttf</string>
+	</array>
 </dict>
 </plist>
