--- a/client/ios/RelatedDigitalTestClient/Info.plist
+++ b/client/ios/RelatedDigitalTestClient/Info.plist
@@ -20,6 +20,19 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>rnrd</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>rnrd</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSApplicationCategoryType</key>
@@ -45,6 +58,10 @@
 	<string>We need access to your location for better user experience.</string>
 	<key>NSUserTrackingUsageDescription</key>
 	<string>We need user tracking permission.</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>TheNautigal_Regular.ttf</string>
+	</array>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
@@ -66,9 +83,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>TheNautigal_Regular.ttf</string>
-	</array>
 </dict>
 </plist>
