--- a/client/ios/RelatedDigitalTestClient.xcodeproj/xcshareddata/xcschemes/RelatedDigitalTestClient.xcscheme
+++ b/client/ios/RelatedDigitalTestClient.xcodeproj/xcshareddata/xcschemes/RelatedDigitalTestClient.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1130"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -60,6 +60,10 @@
             ReferencedContainer = "container:RelatedDigitalTestClient.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <LocationScenarioReference
+         identifier = "../../../../../../dig&#x306;er/yedek/cengel.gpx"
+         referenceType = "0">
+      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
