--- a/client/android/build.gradle
+++ b/client/android/build.gradle
@@ -4,17 +4,20 @@ buildscript {
     ext {
         buildToolsVersion = "28.0.3"
         minSdkVersion = 19
-        compileSdkVersion = 28
-        targetSdkVersion = 28
+        compileSdkVersion = 32
+        targetSdkVersion = 32
     }
     repositories {
         google()
         jcenter()
-        maven {url 'http://developer.huawei.com/repo/'}
+        maven {
+            url 'http://developer.huawei.com/repo/'
+            allowInsecureProtocol = true
+        }
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.5.4")
-        classpath 'com.google.gms:google-services:4.3.3'
+        classpath('com.android.tools.build:gradle:7.1.2')
+        classpath 'com.google.gms:google-services:4.3.10'
         classpath 'com.huawei.agconnect:agcp:1.6.5.300'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -37,6 +40,9 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
-        maven {url 'http://developer.huawei.com/repo/'}
+        maven {
+            url 'http://developer.huawei.com/repo/'
+            allowInsecureProtocol = true
+        }
     }
 }
