--- a/client/android/build.gradle
+++ b/client/android/build.gradle
@@ -3,13 +3,14 @@
 buildscript {
     ext {
         buildToolsVersion = "28.0.3"
-        minSdkVersion = 19
+        minSdkVersion = 21
         compileSdkVersion = 32
         targetSdkVersion = 32
     }
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven {
             url 'http://developer.huawei.com/repo/'
             allowInsecureProtocol = true
@@ -39,6 +40,7 @@ allprojects {
 
         google()
         jcenter()
+        mavenCentral()
         maven { url 'https://www.jitpack.io' }
         maven {
             url 'http://developer.huawei.com/repo/'
