--- a/client/android/app/src/main/AndroidManifest.xml
+++ b/client/android/app/src/main/AndroidManifest.xml
@@ -1,92 +1,32 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.relateddigital.pushsdk">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.relateddigitaltestclient">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-
-    <application
-      android:name=".MainApplication"
-      android:label="@string/app_name"
-      android:icon="@mipmap/ic_launcher"
-      android:roundIcon="@mipmap/ic_launcher_round"
-      android:allowBackup="false"
-      android:theme="@style/AppTheme">
-      <activity
-        android:name=".MainActivity"
-        android:label="@string/app_name"
-        android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
-        android:launchMode="singleTask"
-        android:windowSoftInputMode="adjustResize">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-        <intent-filter>
-            <action android:name="android.intent.action.VIEW" />
-            <category android:name="android.intent.category.DEFAULT" />
-            <category android:name="android.intent.category.BROWSABLE" />
-            <data android:scheme="rnrd" />
-        </intent-filter>
-      </activity>
-      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
-        <service
-            android:name="com.visilabs.gps.geofence.GeofenceTransitionsIntentService"
-            android:enabled="true"
-            android:permission="android.permission.BIND_JOB_SERVICE" />
-
-        <service
-            android:name="com.visilabs.gps.geofence.GeofenceMonitor"
-            android:enabled="true"
-            android:exported="true" />
-
-        <receiver
-            android:name="com.visilabs.gps.geofence.GeofenceTransitionsReceiver"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.visilabs.android.gps.geofence.ACTION_RECEIVE_GEOFENCE" />
-            </intent-filter>
-        </receiver>
-
-        <receiver
-            android:name="com.visilabs.gps.geofence.VisilabsAlarm"
-            android:exported="false" />
-
-        <receiver
-            android:name="com.visilabs.gps.geofence.GeofenceBroadcastReceiver"
-            android:enabled="true"
-            android:exported="true" />
-
-
-        <service
-            android:name="euromsg.com.euromobileandroid.service.EuroFirebaseMessagingService"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
-
-        <service
-            android:name="euromsg.com.euromobileandroid.service.EuroHuaweiMessagingService"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.huawei.push.action.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
-
-        <receiver
-            android:name="com.pushsdk.CarouselItemClickReceiver"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="CarouselItemClickIntentFilter" />
-            </intent-filter>
-        </receiver>
-    </application>
-    <queries>
-        <package android:name="com.example.app1" />
-        <package android:name="com.example.app2" />
-    </queries>
+  <uses-permission android:name="android.permission.INTERNET" />
+  
+  <application android:name=".MainApplication" android:label="@string/app_name" android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round" android:allowBackup="false" android:theme="@style/AppTheme">
+    <service android:name="euromsg.com.euromobileandroid.service.EuroFirebaseMessagingService" android:exported="false">
+      <intent-filter>
+        <action android:name="com.google.firebase.MESSAGING_EVENT" />
+      </intent-filter>
+    </service>
+    <service android:name="euromsg.com.euromobileandroid.service.EuroHuaweiMessagingService" android:exported="false">
+      <intent-filter>
+        <action android:name="com.huawei.push.action.MESSAGING_EVENT" />
+      </intent-filter>
+    </service>
+    <service android:name="com.visilabs.gps.geofence.GeofenceTransitionsIntentService" android:enabled="true" android:permission="android.permission.BIND_JOB_SERVICE" />
+    <service android:name="com.visilabs.gps.geofence.GeofenceMonitor" android:enabled="true" android:exported="true" />
+    <receiver android:name="com.visilabs.gps.geofence.GeofenceTransitionsReceiver" android:enabled="true" android:exported="true">
+      <intent-filter>
+        <action android:name="com.visilabs.android.gps.geofence.ACTION_RECEIVE_GEOFENCE" />
+      </intent-filter>
+    </receiver>
+    <receiver android:name="com.visilabs.gps.geofence.VisilabsAlarm" android:exported="false" />
+    <receiver android:name="com.visilabs.gps.geofence.GeofenceBroadcastReceiver" android:enabled="true" android:exported="true" />
+    <activity android:name=".MainActivity" android:label="@string/app_name" android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode" android:launchMode="singleTask" android:windowSoftInputMode="adjustResize" android:exported="true">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+  </application>
 </manifest>
