--- a/client/package.json
+++ b/client/package.json
@@ -15,28 +15,20 @@
     "link": "wml add ../sdk node_modules/react-native-related-digital && wml start"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.13.2",
-    "@react-native-community/cli-platform-android": "^9.0.0",
-    "@react-native-community/masked-view": "^0.1.11",
-    "crossroads": "^0.12.2",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
-    "react-native-gesture-handler": "1.6.0",
-    "react-native-reanimated": "^1.13.4",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "react-native-related-digital": "file:../sdk",
-    "react-native-router-flux": "^4.3.1",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.2"
+    "react": "18.0.0",
+    "react-native": "0.69.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.5.1",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.58.0",
-    "react-test-renderer": "16.11.0"
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.32.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.70.3",
+    "react-test-renderer": "18.0.0"
   },
   "jest": {
     "preset": "react-native"
