--- a/client/ios/RelatedDigitalTestClient/RelatedDigitalTestClient.entitlements
+++ b/client/ios/RelatedDigitalTestClient/RelatedDigitalTestClient.entitlements
@@ -4,5 +4,9 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.org.reactjs.native.example.RelatedDigitalTestClient.relateddigital</string>
+	</array>
 </dict>
 </plist>
