--- a/sdk/android/build.gradle
+++ b/sdk/android/build.gradle
@@ -12,7 +12,6 @@ buildscript {
 
     dependencies {
       classpath("com.android.tools.build:gradle:3.5.4")
-      classpath 'com.huawei.agconnect:agcp:1.6.5.300'
     }
   }
 }
@@ -46,6 +45,6 @@ dependencies {
   implementation 'com.facebook.react:react-native:+'
   implementation 'com.google.firebase:firebase-messaging:22.0.0'
 
-  api "com.github.relateddigital:euromessage-android:5.2.2"
+  api "com.github.relateddigital:euromessage-android:5.2.3-google"
   api "com.github.relateddigital:visilabs-android:6.0.4"
 }
