--- a/sdk/android/build.gradle
+++ b/sdk/android/build.gradle
@@ -45,6 +45,6 @@ dependencies {
   implementation 'com.facebook.react:react-native:+'
   implementation 'com.google.firebase:firebase-messaging:22.0.0'
 
-  api "com.github.relateddigital:euromessage-android:5.2.3-google"
+  api "com.github.relateddigital:euromessage-android:0.9.5"
   api "com.github.relateddigital:visilabs-android:6.0.4"
 }
