--- a/sdk/package.json
+++ b/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-related-digital",
-  "version": "0.3.4-google",
+  "version": "0.9.9",
   "private": false,
   "author": "Related Digital",
   "license": "MIT",
