--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
-    "react-native-related-digital": "file:../sdk",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "react-native-related-digital": "file:../sdk"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
