--- a/sdk/package.json
+++ b/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-related-digital",
-  "version": "0.9.9",
+  "version": "1.0.0",
   "private": false,
   "author": "Related Digital",
   "license": "MIT",
@@ -16,8 +16,8 @@
     "querystring": "^0.2.0"
   },
   "peerDependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.1",
     "react": ">=16.8.6",
-    "react-native": ">=0.60.0",
-    "@react-native-async-storage/async-storage": "^1.13.1"
+    "react-native": ">=0.60.0"
   }
 }
