--- a/example/package.json
+++ b/example/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "^2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/stack": "^6.3.14",
-    "react-native-screens": "^3.20.0",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-safe-area-context": "^4.5.0"
+    "@react-navigation/bottom-tabs": "^6.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
