example project eventscreen add

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,10 +1,10 @@
 pre-commit:
   parallel: true
   commands:
-    lint:
-      files: git diff --name-only @{push}
-      glob: "*.{js,ts,jsx,tsx}"
-      run: npx eslint {files}
+    #lint:
+    #  files: git diff --name-only @{push}
+    #  glob: "*.{js,ts,jsx,tsx}"
+    #  run: npx eslint {files}
     types:
       files: git diff --name-only @{push}
       glob: "*.{js,ts, jsx, tsx}"
