--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,6 @@
+apply plugin: "com.android.library"
+apply plugin: "kotlin-android"
+
 buildscript {
   // Buildscript is evaluated before everything else so we can't use getExtOrDefault
   def kotlin_version = rootProject.ext.has("kotlinVersion") ? rootProject.ext.get("kotlinVersion") : project.properties["RelatedDigital_kotlinVersion"]
@@ -10,18 +13,21 @@ buildscript {
   }
 
   dependencies {
-    classpath "com.android.tools.build:gradle:7.2.1"
-    // noinspection DifferentKotlinGradleVersion
+
+    classpath "com.android.tools.build:gradle:7.3.1"
+    classpath("de.undercouch:gradle-download-task:5.0.1")
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
   }
 }
 
 def isNewArchitectureEnabled() {
+  println 'A message which is logged at QUIET level'
   return rootProject.hasProperty("newArchEnabled") && rootProject.getProperty("newArchEnabled") == "true"
 }
 
-apply plugin: "com.android.library"
-apply plugin: "kotlin-android"
+
+
 
 if (isNewArchitectureEnabled()) {
   apply plugin: "com.facebook.react"
@@ -42,6 +48,7 @@ android {
     minSdkVersion getExtOrIntegerDefault("minSdkVersion")
     targetSdkVersion getExtOrIntegerDefault("targetSdkVersion")
     buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
+    multiDexEnabled true
   }
   buildTypes {
     release {
@@ -61,27 +68,31 @@ android {
 }
 
 repositories {
-  mavenCentral()
   google()
+  mavenCentral()
   maven { url 'https://jitpack.io' }
   maven { url 'https://developer.huawei.com/repo/' }
+  maven {
+      // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+      url("$rootDir/../node_modules/react-native/android")
+}
 }
 
 def kotlin_version = getExtOrDefault("kotlinVersion")
 
 dependencies {
-  // For < 0.71, this will be from the local maven repo
-  // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
-  //noinspection GradleDynamicVersion
-  implementation "com.facebook.react:react-native"
+  implementation("com.facebook.react:react-native:+")
+  implementation "com.facebook.react:react-android:0.71.3"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  implementation 'com.github.relateddigital:relateddigital-android:1.0.8'
+  api 'com.github.relateddigital:relateddigital-google:1.0.8'
 }
+
 
 if (isNewArchitectureEnabled()) {
   react {
     jsRootDir = file("../src/")
     libraryName = "RelatedDigital"
-    codegenJavaPackageName = "com.relateddigital"
+    codegenJavaPackageName = "com.react-native-related-digital"
   }
 }
+
