--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: "com.android.application"
-apply plugin: "com.facebook.react"
+//apply plugin: 'com.google.gms.google-services'
+//apply plugin: "com.facebook.react"
 
 import com.android.build.OutputFile
 
@@ -98,8 +99,9 @@ android {
         applicationId "com.relateddigitalexample"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
+        multiDexEnabled true
     }
 
     splits {
@@ -150,9 +152,9 @@ android {
 
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
-    implementation("com.facebook.react:react-android")
+    //implementation "com.facebook.react:react-android:0.71.3"
 
-    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
+    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
