--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "test": "jest",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
+    "prepare": "bob build",
     "prepack": "bob build",
     "release": "release-it",
     "example": "yarn --cwd example",
@@ -56,29 +57,28 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^11.0.0",
     "@evilmartians/lefthook": "^1.2.9",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native-community/eslint-config": "^3.0.0",
     "@release-it/conventional-changelog": "^5.1.1",
-    "@types/jest": "^29.4.0",
-    "@types/react": "~18.0.28",
-    "@types/react-native": "0.71.3",
-    "commitlint": "^17.4.4",
-    "del-cli": "^5.0.0",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.6.0",
+    "@types/jest": "^26.0.0",
+    "@types/react": "^17.0.1",
+    "@types/react-native": "^0.64.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "commitlint": "^17.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.4.3",
-    "pod-install": "^0.1.38",
+    "eslint-plugin-react-native": "^4.0.0",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "pod-install": "^0.1.0",
     "prettier": "^2.8.4",
-    "react": "18.2.0",
-    "react-native": "0.71.3",
-    "react-native-builder-bob": "^0.20.3",
-    "release-it": "^15.6.0",
-    "typescript": "^4.9.5"
-  },
-  "resolutions": {
-    "@types/react": "18.0.28"
+    "react": "17.0.1",
+    "react-native": "0.64.0",
+    "react-native-builder-bob": "^0.18.1",
+    "release-it": "^15.6.1",
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "react": "*",
