--- a/lefthook.yml
+++ b/lefthook.yml
@@ -5,12 +5,12 @@ pre-commit:
     #  files: git diff --name-only @{push}
     #  glob: "*.{js,ts,jsx,tsx}"
     #  run: npx eslint {files}
-    types:
-      files: git diff --name-only @{push}
-      glob: "*.{js,ts, jsx, tsx}"
-      run: npx tsc --noEmit
+    #types:
+    #  files: git diff --name-only @{push}
+    #  glob: "*.{js,ts, jsx, tsx}"
+    #  run: npx tsc --noEmit
 commit-msg:
   parallel: true
   commands:
-    commitlint:
-      run: npx commitlint --edit
+  #  commitlint:
+  #    run: npx commitlint --edit
