--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,3 +3,5 @@ RelatedDigital_minSdkVersion=21
 RelatedDigital_targetSdkVersion=33
 RelatedDigital_compileSdkVersion=33
 RelatedDigital_ndkversion=21.4.7075529
+android.useAndroidX=true
+android.enableJetifier=true
