--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -8,7 +8,7 @@ import com.android.build.OutputFile
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
  */
-react {
+//react {
     /* Folders */
     //   The root of your project, i.e. where "package.json" lives. Default is '..'
     // root = file("../")
@@ -51,7 +51,7 @@ react {
     //
     //   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
     // hermesFlags = ["-O", "-output-source-map"]
-}
+//}
 
 /**
  * Set this to true to create four separate APKs instead of one,
@@ -153,6 +153,8 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     //implementation "com.facebook.react:react-android:0.71.3"
+
+    //implementation("com.facebook.react:react-android")
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
 
