--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,32 +1,37 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+  println "rootDir: $rootDir"
   ext {
     buildToolsVersion = "33.0.2"
     minSdkVersion = 21
     compileSdkVersion = 33
     targetSdkVersion = 33
-    kotlin_version = "1.8.0"
-    ndkVersion = "23.1.7779620"
+    kotlin_version = "1.8.10"
+    ndkVersion = "24.0.8215888"
   }
   repositories {
     google()
     mavenCentral()
     maven { url 'https://jitpack.io' }
     maven { url 'https://developer.huawei.com/repo/' }
+    maven {
+      // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+      url("$rootDir/../node_modules/react-native/android")
+    }
   }
   dependencies {
-    classpath("com.android.tools.build:gradle:7.3.1")
-    classpath("com.facebook.react:react-native-gradle-plugin")
+    classpath("com.android.tools.build:gradle:7.1.3")
+    //classpath("com.facebook.react:react-native-gradle-plugin")
     classpath("de.undercouch:gradle-download-task:5.0.1")
-    //classpath "com.google.gms:google-services:4.3.15"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    //classpath "com.google.gms:google-services:4.3.15"
+
   }
 }
 
 allprojects {
   repositories {
-    maven { url 'https://jitpack.io' }
     maven {
       // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
       url("$rootDir/../node_modules/react-native/android")
@@ -36,12 +41,13 @@ allprojects {
       url("$rootDir/../node_modules/jsc-android/dist")
     }
     google()
-    maven { url 'https://www.jitpack.io' }
+    maven { url 'https://jitpack.io' }
+
   }
-  configurations.all {
-        resolutionStrategy {
-            force "com.facebook.react:react-native:" + REACT_NATIVE_VERSION
-        }
-    }
+  //configurations.all {
+  //     resolutionStrategy {
+  //         force "com.facebook.react:react-native:" + REACT_NATIVE_VERSION
+  //     }
+  //}
 }
 
