--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -30,8 +30,18 @@ buildscript {
   }
 }
 
+def REACT_NATIVE_VERSION = new File(['node', '--print', "JSON.parse(require('fs').readFileSync(require.resolve('react-native/package.json'), 'utf-8')).version"].execute(null, rootDir).text.trim())
+
 allprojects {
+
+  configurations.all {
+    resolutionStrategy {
+      force "com.facebook.react:react-native:" + REACT_NATIVE_VERSION
+    }
+  }
+
   repositories {
+    mavenLocal()
     maven {
       // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
       url("$rootDir/../node_modules/react-native/android")
@@ -41,6 +51,8 @@ allprojects {
       url("$rootDir/../node_modules/jsc-android/dist")
     }
     google()
+    mavenCentral()
+    jcenter()
     maven { url 'https://jitpack.io' }
 
   }
