--- a/example/package.json
+++ b/example/package.json
@@ -9,19 +9,21 @@
     "pods": "pod-install --quiet"
   },
   "dependencies": {
-    "react": "18.2.0",
+    "react-native-related-digital": "../",
+    "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-screens": "^3.20.0",
     "react-native-safe-area-context": "^4.5.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/stack": "^6.3.16"
+    "@react-navigation/stack": "^6.3.16",
+    "lottie-react-native": "^5.1.4",
+    "@react-native-async-storage/async-storage": "^1.17.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.0",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/runtime": "7.21.0",
-    "babel-plugin-module-resolver": "^5.0.0",
+    "@babel/core": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
+    "babel-plugin-module-resolver": "^4.0.0",
     "metro-react-native-babel-preset": "^0.64.0"
   }
 }
