--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,7 +1,8 @@
-RelatedDigital_kotlinVersion=1.8.10
+RelatedDigital_kotlinVersion=1.8.0
 RelatedDigital_minSdkVersion=21
-RelatedDigital_targetSdkVersion=33
-RelatedDigital_compileSdkVersion=33
+RelatedDigital_targetSdkVersion=31
+RelatedDigital_compileSdkVersion=31
 RelatedDigital_ndkversion=21.4.7075529
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.jvmargs=-Xmx4608m
