--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: "com.android.application"
-//apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
 //apply plugin: "com.facebook.react"
 
 import com.android.build.OutputFile
@@ -9,48 +9,48 @@ import com.android.build.OutputFile
  * By default you don't need to apply any configuration, just uncomment the lines you need.
  */
 //react {
-    /* Folders */
-    //   The root of your project, i.e. where "package.json" lives. Default is '..'
-    // root = file("../")
-    //   The folder where the react-native NPM package is. Default is ../node_modules/react-native
-    // reactNativeDir = file("../node_modules/react-native")
-    //   The folder where the react-native Codegen package is. Default is ../node_modules/react-native-codegen
-    // codegenDir = file("../node_modules/react-native-codegen")
-    //   The cli.js file which is the React Native CLI entrypoint. Default is ../node_modules/react-native/cli.js
-    // cliFile = file("../node_modules/react-native/cli.js")
+/* Folders */
+//   The root of your project, i.e. where "package.json" lives. Default is '..'
+// root = file("../")
+//   The folder where the react-native NPM package is. Default is ../node_modules/react-native
+// reactNativeDir = file("../node_modules/react-native")
+//   The folder where the react-native Codegen package is. Default is ../node_modules/react-native-codegen
+// codegenDir = file("../node_modules/react-native-codegen")
+//   The cli.js file which is the React Native CLI entrypoint. Default is ../node_modules/react-native/cli.js
+// cliFile = file("../node_modules/react-native/cli.js")
 
-    /* Variants */
-    //   The list of variants to that are debuggable. For those we're going to
-    //   skip the bundling of the JS bundle and the assets. By default is just 'debug'.
-    //   If you add flavors like lite, prod, etc. you'll have to list your debuggableVariants.
-    // debuggableVariants = ["liteDebug", "prodDebug"]
+/* Variants */
+//   The list of variants to that are debuggable. For those we're going to
+//   skip the bundling of the JS bundle and the assets. By default is just 'debug'.
+//   If you add flavors like lite, prod, etc. you'll have to list your debuggableVariants.
+// debuggableVariants = ["liteDebug", "prodDebug"]
 
-    /* Bundling */
-    //   A list containing the node command and its flags. Default is just 'node'.
-    // nodeExecutableAndArgs = ["node"]
-    //
-    //   The command to run when bundling. By default is 'bundle'
-    // bundleCommand = "ram-bundle"
-    //
-    //   The path to the CLI configuration file. Default is empty.
-    // bundleConfig = file(../rn-cli.config.js)
-    //
-    //   The name of the generated asset file containing your JS bundle
-    // bundleAssetName = "MyApplication.android.bundle"
-    //
-    //   The entry file for bundle generation. Default is 'index.android.js' or 'index.js'
-    // entryFile = file("../js/MyApplication.android.js")
-    //
-    //   A list of extra flags to pass to the 'bundle' commands.
-    //   See https://github.com/react-native-community/cli/blob/main/docs/commands.md#bundle
-    // extraPackagerArgs = []
+/* Bundling */
+//   A list containing the node command and its flags. Default is just 'node'.
+// nodeExecutableAndArgs = ["node"]
+//
+//   The command to run when bundling. By default is 'bundle'
+// bundleCommand = "ram-bundle"
+//
+//   The path to the CLI configuration file. Default is empty.
+// bundleConfig = file(../rn-cli.config.js)
+//
+//   The name of the generated asset file containing your JS bundle
+// bundleAssetName = "MyApplication.android.bundle"
+//
+//   The entry file for bundle generation. Default is 'index.android.js' or 'index.js'
+// entryFile = file("../js/MyApplication.android.js")
+//
+//   A list of extra flags to pass to the 'bundle' commands.
+//   See https://github.com/react-native-community/cli/blob/main/docs/commands.md#bundle
+// extraPackagerArgs = []
 
-    /* Hermes Commands */
-    //   The hermes compiler command to run. By default it is 'hermesc'
-    // hermesCommand = "$rootDir/my-custom-hermesc/bin/hermesc"
-    //
-    //   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
-    // hermesFlags = ["-O", "-output-source-map"]
+/* Hermes Commands */
+//   The hermes compiler command to run. By default it is 'hermesc'
+// hermesCommand = "$rootDir/my-custom-hermesc/bin/hermesc"
+//
+//   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
+// hermesFlags = ["-O", "-output-source-map"]
 //}
 
 /**
@@ -59,6 +59,14 @@ import com.android.build.OutputFile
  * use App Bundles (https://developer.android.com/guide/app-bundle/)
  * and want to have separate APKs to upload to the Play Store.
  */
+
+project.ext.react = [
+  enableHermes: false,  // clean and rebuild if changing
+  entryFile   : "index.js",
+]
+
+apply from: "../../node_modules/react-native/react.gradle"
+
 def enableSeparateBuildPerCPUArchitecture = false
 
 /**
@@ -79,96 +87,101 @@ def enableProguardInReleaseBuilds = false
  */
 def jscFlavor = 'org.webkit:android-jsc:+'
 
-/**
- * Private function to get the list of Native Architectures you want to build.
- * This reads the value from reactNativeArchitectures in your gradle.properties
- * file and works together with the --active-arch-only flag of react-native run-android.
- */
-def reactNativeArchitectures() {
-    def value = project.getProperties().get("reactNativeArchitectures")
-    return value ? value.split(",") : ["armeabi-v7a", "x86", "x86_64", "arm64-v8a"]
-}
+def enableHermes = project.ext.react.get("enableHermes", false);
+
 
 android {
-    ndkVersion rootProject.ext.ndkVersion
+  ndkVersion rootProject.ext.ndkVersion
 
-    compileSdkVersion rootProject.ext.compileSdkVersion
+  compileSdkVersion rootProject.ext.compileSdkVersion
+  //namespace "com.relateddigitalexample"
+  defaultConfig {
+    applicationId "com.relateddigital.androidexampleapp"
+    minSdkVersion rootProject.ext.minSdkVersion
+    targetSdkVersion rootProject.ext.targetSdkVersion
+    versionCode 2
+    versionName "2.0"
+    multiDexEnabled true
+  }
 
-    namespace "com.relateddigitalexample"
-    defaultConfig {
-        applicationId "com.relateddigitalexample"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 2
-        versionName "2.0"
-        multiDexEnabled true
+  splits {
+    abi {
+      reset()
+      enable enableSeparateBuildPerCPUArchitecture
+      universalApk false
+      include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
     }
+  }
+  signingConfigs {
+    debug {
+      storeFile file('debug.keystore')
+      storePassword 'android'
+      keyAlias 'androiddebugkey'
+      keyPassword 'android'
+    }
+  }
+  buildTypes {
+    debug {
+      signingConfig signingConfigs.debug
+    }
+    release {
+      // Caution! In production, you need to generate your own keystore file.
+      // see https://reactnative.dev/docs/signed-apk-android.
+      signingConfig signingConfigs.debug
+      minifyEnabled enableProguardInReleaseBuilds
+      proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+    }
+  }
 
-    splits {
-        abi {
-            reset()
-            enable enableSeparateBuildPerCPUArchitecture
-            universalApk false  // If true, also generate a universal APK
-            include (*reactNativeArchitectures())
-        }
-    }
-    signingConfigs {
-        debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
-        }
-    }
-    buildTypes {
-        debug {
-            signingConfig signingConfigs.debug
-        }
-        release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
-            minifyEnabled enableProguardInReleaseBuilds
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-        }
-    }
+  // applicationVariants are e.g. debug, release
+  applicationVariants.all { variant ->
+    variant.outputs.each { output ->
+      // For each separate APK per architecture, set a unique version code as described here:
+      // https://developer.android.com/studio/build/configure-apk-splits.html
+      // Example: versionCode 1 will generate 1001 for armeabi-v7a, 1002 for x86, etc.
+      def versionCodes = ["armeabi-v7a": 1, "x86": 2, "arm64-v8a": 3, "x86_64": 4]
+      def abi = output.getFilter(OutputFile.ABI)
+      if (abi != null) {  // null for the universal-debug, universal-release variants
+        output.versionCodeOverride =
+          defaultConfig.versionCode * 1000 + versionCodes.get(abi)
+      }
 
-    // applicationVariants are e.g. debug, release
-    applicationVariants.all { variant ->
-        variant.outputs.each { output ->
-            // For each separate APK per architecture, set a unique version code as described here:
-            // https://developer.android.com/studio/build/configure-apk-splits.html
-            // Example: versionCode 1 will generate 1001 for armeabi-v7a, 1002 for x86, etc.
-            def versionCodes = ["armeabi-v7a": 1, "x86": 2, "arm64-v8a": 3, "x86_64": 4]
-            def abi = output.getFilter(OutputFile.ABI)
-            if (abi != null) {  // null for the universal-debug, universal-release variants
-                output.versionCodeOverride =
-                        defaultConfig.versionCode * 1000 + versionCodes.get(abi)
-            }
-
-        }
     }
+  }
 }
 
 dependencies {
-    // The version of react-native is set by the React Native Gradle Plugin
-    //implementation "com.facebook.react:react-android:0.71.3"
+  // The version of react-native is set by the React Native Gradle Plugin
+  //implementation "com.facebook.react:react-android:0.71.3"
 
-    //implementation("com.facebook.react:react-android")
+  //implementation("com.facebook.react:react-android")
 
-    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
+  implementation "com.facebook.react:react-native:+"
+  implementation 'com.android.support:multidex:1.0.3'
+  implementation 'androidx.core:core-ktx:1.8.0'
 
-    debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
-    debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
-        exclude group:'com.squareup.okhttp3', module:'okhttp'
-    }
+  implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
 
-    debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}")
-    if (hermesEnabled.toBoolean()) {
-        implementation("com.facebook.react:hermes-android")
-    } else {
-        implementation jscFlavor
-    }
+  debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
+    exclude group: 'com.facebook.fbjni'
+  }
+
+  debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
+    exclude group: 'com.facebook.flipper'
+    exclude group: 'com.squareup.okhttp3', module: 'okhttp'
+  }
+  debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}") {
+    exclude group: 'com.facebook.flipper'
+  }
+
+
+  if (enableHermes) {
+    def hermesPath = "../../node_modules/hermes-engine/android/";
+    debugImplementation files(hermesPath + "hermes-debug.aar")
+    releaseImplementation files(hermesPath + "hermes-release.aar")
+  } else {
+    implementation jscFlavor
+  }
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
