--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -4,10 +4,10 @@ buildscript {
   println "rootDir: $rootDir"
   ext {
     buildToolsVersion = "33.0.2"
-    minSdkVersion = 21
+    minSdkVersion = 23
     compileSdkVersion = 33
     targetSdkVersion = 33
-    kotlin_version = "1.8.10"
+    kotlin_version = "1.8.0"
     ndkVersion = "24.0.8215888"
   }
   repositories {
@@ -21,27 +21,29 @@ buildscript {
     }
   }
   dependencies {
-    classpath("com.android.tools.build:gradle:7.1.3")
-    //classpath("com.facebook.react:react-native-gradle-plugin")
-    classpath("de.undercouch:gradle-download-task:5.0.1")
+    classpath 'com.android.tools.build:gradle:7.2.2'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath 'com.google.gms:google-services:4.3.15'
+    classpath 'com.huawei.agconnect:agcp:1.7.2.300'
+
+
+
+    //classpath("com.android.tools.build:gradle:7.1.3")
+    //classpath("com.facebook.react:react-native-gradle-plugin")
+    //classpath("de.undercouch:gradle-download-task:5.0.1")
+    //classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     //classpath "com.google.gms:google-services:4.3.15"
 
   }
 }
 
-def REACT_NATIVE_VERSION = new File(['node', '--print', "JSON.parse(require('fs').readFileSync(require.resolve('react-native/package.json'), 'utf-8')).version"].execute(null, rootDir).text.trim())
+//def REACT_NATIVE_VERSION = new File(['node', '--print', "JSON.parse(require('fs').readFileSync(require.resolve('react-native/package.json'), 'utf-8')).version"].execute(null, rootDir).text.trim())
+
 
 allprojects {
-
-  configurations.all {
-    resolutionStrategy {
-      force "com.facebook.react:react-native:" + REACT_NATIVE_VERSION
-    }
-  }
-
   repositories {
     mavenLocal()
+    mavenCentral()
     maven {
       // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
       url("$rootDir/../node_modules/react-native/android")
@@ -50,16 +52,18 @@ allprojects {
       // Android JSC is installed from npm
       url("$rootDir/../node_modules/jsc-android/dist")
     }
-    google()
-    mavenCentral()
-    jcenter()
-    maven { url 'https://jitpack.io' }
+    maven {
+      url 'https://developer.huawei.com/repo/'
+    }
 
+    google()
+    maven { url 'https://jitpack.io' }
   }
-  //configurations.all {
-  //     resolutionStrategy {
-  //         force "com.facebook.react:react-native:" + REACT_NATIVE_VERSION
-  //     }
-  //}
 }
 
+/*
+subprojects {
+  def lottieJavadoctask = tasks.findByPath(':lottie-react-native:androidJavadocs')
+  lottieJavadoctask.enabled = false
+}
+*/
