--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -1,24 +1,34 @@
+$RNFirebaseAnalyticsWithoutAdIdSupport=true
+
+
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 platform :ios, '12.4'
 
-target 'RelatedDigitalExampleNotificationServiceExtension' do
-  pod 'RelatedDigitalIOS', '4.0.13'
-end
+#target 'RelatedDigitalExampleNotificationServiceExtension' do
+#  config = use_native_modules!
+#  use_react_native!(:path => config["reactNativePath"])
+#end
 
 target 'RelatedDigitalExample' do
   config = use_native_modules!
   use_react_native!(:path => config["reactNativePath"])
-  
+
+  #target 'RelatedDigitalExampleTests' do
+  #    inherit! :complete
+  #end
+
+
   pod 'RNRate', :path => '../node_modules/react-native-rate'
-  
+
   use_flipper!({ 'Flipper-Folly' => '2.5.3', 'Flipper' => '0.87.0', 'Flipper-RSocket' => '1.3.1' })
   post_install do |installer|
-    flipper_post_install(installer)
-    notification_service_post_install(installer)
+      flipper_post_install(installer)
+      __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
+
 
 
 
