--- a/example/package.json
+++ b/example/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-native-relateddigital-example",
-  "version": "1.6.0",
+  "version": "1.7.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator='iPhone 14'",
     "start": "react-native start",
     "pods": "pod-install --quiet"
   },
@@ -17,15 +17,16 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@relateddigital/react-native-huawei": "../",
     "lottie-react-native": "^5.1.5",
-    "react": "18.2.0",
-    "react-native": "0.67.4",
-    "react-native-paper": "^5.7.0",
+    "metro-config": "^0.76.3",
+    "native-base": "^3.4.28",
+    "react": "17.0.2",
+    "react-native": "0.67.5",
     "react-native-rate": "^1.2.9",
-    "react-native-related-digital": "../",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.2.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -34,6 +35,7 @@
     "@types/react-dom": "17.0.0",
     "@types/react-native-vector-icons": "^6.4.13",
     "babel-plugin-module-resolver": "^4.0.0",
+    "escape-string-regexp": "^5.0.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.8.7"
   }
