--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-clipboard/clipboard": "^1.11.2",
     "react": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-related-digital": "file:../sdk"
+    "react-native-fontawesome": "^7.0.0",
+    "react-native-related-digital": "file:../sdk",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
