Example project CustomTabBar refactor

--- a/example/ios/RelatedDigitalExample/Info.plist
+++ b/example/ios/RelatedDigitalExample/Info.plist
@@ -24,8 +24,8 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-  <key>NSUserTrackingUsageDescription</key>
-  <string>Related Digital uses your advertising identifier!</string>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>Related Digital uses your advertising identifier!</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
@@ -55,6 +55,8 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
+	<key>FirebaseAutomaticScreenReportingEnabled</key>
 	<false/>
 </dict>
 </plist>
