--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -3,10 +3,10 @@
 buildscript {
   println "rootDir: $rootDir"
   ext {
-    buildToolsVersion = "33.0.2"
+    buildToolsVersion = "32.0.0"
     minSdkVersion = 23
-    compileSdkVersion = 33
-    targetSdkVersion = 33
+    compileSdkVersion = 32
+    targetSdkVersion = 32
     kotlin_version = "1.8.0"
     ndkVersion = "24.0.8215888"
   }
@@ -53,9 +53,7 @@ allprojects {
       // Android JSC is installed from npm
       url("$rootDir/../node_modules/jsc-android/dist")
     }
-    maven {
-      url 'https://developer.huawei.com/repo/'
-    }
+    maven { url 'https://developer.huawei.com/repo/' }
 
     google()
     maven { url 'https://jitpack.io' }
