--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ app-release.apk
 /client/android/app/agconnect-services.json
 
 /client/android/app/src/main/assets/profiles.json
+
+GoogleService-Info.plist
