drawer close button

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ app-release.apk
 /client/android/app/agconnect-services.json
 
 /client/android/app/src/main/assets/profiles.json
+client/.ruby-version
