--- a/sdk/example/.gitignore
+++ b/sdk/example/.gitignore
@@ -20,30 +20,26 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
+**/.xcode.env.local
 
 # Android/IntelliJ
 #
-android/build/
-android/src/debug/
-android/.idea
-android/.gradle
-android/gradle
-android/local.properties
-android/*.iml
-android/gradlew
-android/gradlew.bat
-android/settings.gradle
+build/
+.idea
+.gradle
+local.properties
+*.iml
+*.hprof
+.cxx/
+*.keystore
+!debug.keystore
+.kotlin/
 
 # node.js
 #
 node_modules/
 npm-debug.log
 yarn-error.log
-
-# BUCK
-buck-out/
-\.buckd/
-android/*.keystore
 
 # fastlane
 #
@@ -52,17 +48,28 @@ android/*.keystore
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/
 
-*/fastlane/report.xml
-*/fastlane/Preview.html
-*/fastlane/screenshots
+**/fastlane/report.xml
+**/fastlane/Preview.html
+**/fastlane/screenshots
+**/fastlane/test_output
 
 # Bundle artifact
 *.jsbundle
 
-# CocoaPods
-/ios/Pods/
+# Ruby / CocoaPods
+**/Pods/
+/vendor/bundle/
 
-#
-.gitattributes
+# Temporary files created by Metro to check the health of the file watcher
+.metro-health-check*
 
-example/
+# testing
+/coverage
+
+# Yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
